gitops/argocd/repo-server-ksops-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server

spec:
  template:
    spec:
      volumes:
        - name: custom-tools
          emptyDir: {}

        - name: sops-age
          secret:
            secretName: sops-age

      containers:
        - name: argocd-repo-server
          volumeMounts:
            - name: custom-tools
              mountPath: /usr/local/bin/ksops
              subPath: ksops

            - name: custom-tools
              mountPath: /usr/local/bin/kustomize
              subPath: kustomize

            - name: sops-age
              mountPath: /etc/sops-age/keys.txt
              subPath: keys.txt
              readOnly: true
